Fixed login text alignment

--- a/client/stylesheets/_common.sass
+++ b/client/stylesheets/_common.sass
@@ -65,6 +65,9 @@ input[type=file]
 .uppercase
 	text-transform: uppercase
 
+.valign-middle
+	vertical-align: middle
+
 .text-center
 	text-align: center
 
