--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -385,6 +385,9 @@ input[type=file] {
 .uppercase {
   text-transform: uppercase; }
 
+.valign-middle {
+  vertical-align: middle; }
+
 .text-center {
   text-align: center; }
 
